{
    "name": "ShieldInputs",
    "maps": [
        {
            "name": "ShieldActions",
            "id": "4c7c069f-41c4-41e0-9aac-1f8174566330",
            "actions": [
                {
                    "name": "Move",
                    "type": "Button",
                    "id": "4cb4c5ec-85ec-4c47-a952-d242d25d7901",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": ""
                },
                {
                    "name": "RaiseShield",
                    "type": "Button",
                    "id": "a4a91eed-a4ed-469e-93d8-8930b22ef03a",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": ""
                }
            ],
            "bindings": [
                {
                    "name": "2D Vector",
                    "id": "76229c22-6875-4c05-86ab-163a60e65c35",
                    "path": "2DVector(mode=2)",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Move",
                    "isComposite": true,
                    "isPartOfComposite": false
                },
                {
                    "name": "up",
                    "id": "ddcc8a77-490d-429e-acf0-b067e96cdc1b",
                    "path": "<Gamepad>/leftStick/up",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Move",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "down",
                    "id": "f8f962c8-67ae-4c75-853e-b1723a91435f",
                    "path": "<Gamepad>/leftStick/down",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Move",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "left",
                    "id": "f174a461-6347-4bcf-9e27-f75bc1606fa2",
                    "path": "<Gamepad>/leftStick/left",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Move",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "right",
                    "id": "461b3deb-79f1-4404-8626-5a61204bf3b4",
                    "path": "<Gamepad>/leftStick/right",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Move",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "",
                    "id": "fb93a225-ecf3-41d2-83f8-7b1ec9b9ccdf",
                    "path": "<XInputController>/buttonWest",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "RaiseShield",
                    "isComposite": false,
                    "isPartOfComposite": false
                }
            ]
        }
    ],
    "controlSchemes": []
}